// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-nymr3r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ywe77f {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-ak33d0 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-ak33d0>* {
  margin-top: 0;
}

.cache-ak33d0>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="cache-nymr3r e1l6meh00"
    >
      <div
        class="elb23zt1 cache-ywe77f e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-ak33d0 elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-nymr3r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ywe77f {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-80bryg {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4f0599;
  opacity: inherit;
  cursor: default;
}

.cache-80bryg>* {
  margin-top: 0;
}

.cache-80bryg>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="cache-nymr3r e1l6meh00"
    >
      <div
        class="elb23zt1 cache-ywe77f e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-80bryg elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-nymr3r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ywe77f {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-1bp6yq0 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #e6e9f0;
  opacity: 0.4;
  cursor: not-allowed;
}

.cache-1bp6yq0>* {
  margin-top: 0;
}

.cache-1bp6yq0>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="cache-nymr3r e1l6meh00"
    >
      <div
        class="elb23zt1 cache-ywe77f e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-1bp6yq0 elb23zt0"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .cache-8i4h07 {
  margin-top: 40px;
}

.cache-nymr3r {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.cache-ywe77f {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.cache-c1n7x0 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

.cache-c1n7x0.cache-c1n7x0 {
  margin-top: 0;
  margin-bottom: 0;
  margin-right: 16px;
}

.cache-q20az6 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  background: #ffffff;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #e6e9f0;
  opacity: inherit;
  cursor: default;
}

.cache-q20az6>* {
  margin-top: 0;
}

.cache-q20az6>*+* {
  margin-top: 16px;
}

<div
    class="elb23zt2 cache-8i4h07"
  >
    <div
      class="cache-nymr3r e1l6meh00"
    >
      <div
        class="elb23zt1 cache-ywe77f e1l6meh00"
      >
        <h2
          class="e1g1zfwd0 cache-c1n7x0"
        >
          Title
        </h2>
      </div>
      <div />
    </div>
    <div
      class="cache-q20az6 elb23zt0"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
